--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <a href="https://towerofgod.fandom.com/wiki/FUG" target="_blank">FUG</a>.
 
 <nav>
-    <a href="akabelajar.html">Home</a> |
+    <a href="index.html">Home</a> |
     <a href="about.html">Homie</a> |
 </html>
+
