--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
   </body>
 
 <nav>
-    <a href="akabelajar.html">Home</a> |
+    <a href="index.html">Home</a> |
     <a href="about.html">Homie</a> |
 </html>
+
